spade-tests/src/snapshots/spade_tests__typeinference__assertions_require_bools.snap
---
source: spade-tests/src/typeinference.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Expected type bool, got int<32>
  ┌─ testinput:2:12
  │
2 │     assert x;
  │            ^ Expected bool here


